force-app/main/default/objects/Service_Console_Useful_Link__mdt.object
<CustomObject>
    <description>Service Console Useful Link</description>
    <fields>
        <fullName>Order__c</fullName>
        <description>Sort Order</description>
        <label>Order</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>Text that will be displayed as the URL</description>
        <label>Title</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <description>Contains URL</description>
        <label>URL</label>
        <length>250</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Service Console Useful Link</label>
    <listViews>
        <fullName>All_data</fullName>
        <columns>Order__c</columns>
        <columns>Title__c</columns>
        <columns>URL__c</columns>
        <columns>DeveloperName</columns>
        <filterScope>Everything</filterScope>
        <label>All data</label>
    </listViews>
    <pluralLabel>Service Console Useful Links</pluralLabel>
</CustomObject>